recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:5: error: unclosed character literal
var rep = 'head'::'tail'
                       ^butLast:5: error: ';' expected but symbol literal found.
var rep = 'head'::'tail'
               ^