recursion.cons.lessons.recursion.cons.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {

var head = l(0)
var tail = l(l.length-2)	
var rep = 'head'::'tail'

return rep	
}
